--- a/index.html
+++ b/index.html
@@ -1,18 +1,1 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="stylesheet" href="/index.4d663569.css">
-  <title>Document</title>
-</head>
-<body>
-  <main class="Main">
-    <h1>
-  Platzi Store
-</h1>
-    <div id="app"></div>
-  </main>
-</body>
-<script defer="" src="/index.975ef6c8.js"></script>
-</html>
+<!DOCTYPE html><html lang="en"><head><meta charset="utf-8"><meta name="viewport" content="width=device-width, initial-scale=1.0"><link rel="stylesheet" href="index.dcf0769c.css"><title>Document</title></head><body> <main class="Main"> <h1> Platzi Store </h1> <div id="app"></div> </main> </body><script defer type="module" src="index.4681b60d.js"></script></html>
